Fixed some bug with synced folders not showing

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ body {
   -webkit-app-region: drag;
   width: 100%;
   height: 100%;
-  overflow: auto;
 }
 
 .no-drag {
